--- a/src/css/imports/_typography.scss
+++ b/src/css/imports/_typography.scss
@@ -20,7 +20,7 @@ body {
   background-color: var(--off-white);
  }
 
-p {
+main p {
   margin-bottom: var(--spacing-medium);
   max-width: 32rem;
 }
