--- a/site/layouts/partials/4-up.html
+++ b/site/layouts/partials/4-up.html
@@ -1,15 +1,16 @@
-<div class="bg-off-white pv4">
-	<div class="ph3 mw7 center">
-		<h2 class="f2 b lh-title mb2">{{.heading}}</h2>
-		<p class="mb4 mw6">{{.description}}</p>
+<div class="blurb-container">
+	<h2>{{.heading}}</h2>
+	<p>{{.description}}</p>
 
-		<div class="flex-ns flex-wrap mhn2-ns mb3">
-			{{ range .blurbs }}
-				<div class="ph2-ns w-50-ns mb4">
-					<img src="{{ .image }}" alt="" class="center db mb3" style="width: 240px">
-					<p>{{ .text }}</p>
+	<div class="blurbs">
+		{{ range .blurbs }}
+			<div class="blurb">
+				<div class="img" {{ with .image }} style="background-image: url(/img/blurb/{{ . }}"{{ end }}>
+					<img src="/img/blurb/{{ .image }}" alt="{{ .alt }}">
 				</div>
-			{{ end }}
-		</div>
+				<h3><a href="{{ .link }}">{{ .texttitle }}</a></h3>
+				<p>{{ .text }}</p>
+			</div>
+		{{ end }}
 	</div>
 </div>
