--- a/site/layouts/partials/head.html
+++ b/site/layouts/partials/head.html
@@ -1,31 +1,34 @@
 <head>
-
   <title>{{ .Title }} | {{ $.Site.Title }}</title>
-
   {{ $stylesheet := .Site.Data.webpack.main }}
   {{ with $stylesheet.css }}
-    <link href="{{ relURL . }}" rel="stylesheet">
+  <link href="{{ relURL . }}" rel="stylesheet">
   {{ end }}
 
 	<meta charset="utf-8">
-	<meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
   <base href="{{ $.Site.BaseURL }}">
 
 	<link href="https://fonts.googleapis.com/css?family=Nunito+Sans:400,700" rel="stylesheet">
 
 	<!-- Favicons -->
-	<link rel="apple-touch-icon" sizes="180x180" href="/img/apple-touch-icon.png">
-	<link rel="icon" type="image/png" href="/img/favicon-32x32.png" sizes="32x32">
-	<link rel="icon" type="image/png" href="/img/favicon-16x16.png" sizes="16x16">
-	<link rel="manifest" href="/manifest.json">
-	<link rel="mask-icon" href="/img/safari-pinned-tab.svg" color="#ff4400">
-	<meta name="theme-color" content="#fff">
+  <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+  <meta name="robots" content="index,follow">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="shortcut icon" href="/icons/16x16.png" type="image/x-icon">
+  <link rel="apple-touch-icon" sizes="57x57" href="/icons/57x57.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="/icons/72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="/icons/76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="/icons/114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="/icons/120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="/icons/144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="/icons/152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/icons/180x180.png">
 
   <!-- Open Graph Hugo https://gohugo.io/templates/internal/#open-graph -->
   {{ template "_internal/opengraph.html" . }}
 
   {{ if .IsHome }}
-    <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+  <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
   {{ end }}
 </head>
