--- a/site/layouts/partials/jumbotron.html
+++ b/site/layouts/partials/jumbotron.html
@@ -1,18 +1,15 @@
-<div class="pv5 pv6-l ph3 bg-center cover" style="background-image: url('{{.imageUrl}}')">
-  <div class="mw7 center ph3">
-    <div class="db mb3">
-      <div class="mw7 relative bg-fix-primary mb3">
-        <h1 class="f2 f1-l b di lh-title mb3 white mw6 bg-primary">
-          {{.title}}
-        </h1>
-      </div>
-      <div class="mw7 relative bg-fix-primary">
-        {{ if .subtitle }}
-        <p class="b f4 di lh-title mb3 white mw6 bg-primary">
-          {{.subtitle}}
-        </p>
-        {{ end }}
-      </div>
-    </div>
+<!--banner image -->
+<div class="heroimage pv5 pv6-l" style="background-image: url('{{.imageUrl}}')">
+  <div>
+    <a href="https://www.schedulicity.com/scheduling/PMCPD3P" class="btn-primary">Make an appointment</a>
+    <h1>
+      <span>{{.title}}</span>
+    </h1>
+    {{ if .subtitle }}
+    <p class="subtitle">
+     <span>{{.subtitle}}</span>
+    </p>
+    {{ end }}
   </div>
 </div>
+<!-- end banner image -->
