--- a/site/layouts/partials/social-icon.html
+++ b/site/layouts/partials/social-icon.html
@@ -1,7 +1,7 @@
-<li class="dib ph2 raise">
-  <a href="{{.link}}" class="link bg-white black db relative br-100 pa2">
+<li>
+  <a href="{{.link}}">
     <!-- see SVG tips for alt text https://www.w3.org/WAI/tutorials/images/tips/ -->
-    <svg width="16px" height="16px" class="db" aria-labelledby="alt-{{.svg}}">
+    <svg width="16" height="16" aria-labelledby="alt-{{.svg}}">
       <title id="alt-{{.svg}}">{{.alt}}</title>
         {{ $imageFile := (print "/img/" .svg ".svg") }}
         {{ with resources.Get $imageFile }}
