--- a/site/layouts/partials/4-up.html
+++ b/site/layouts/partials/4-up.html
@@ -10,6 +10,7 @@
 				</div>
 				<h3><a href="{{ .link }}">{{ .texttitle }}</a></h3>
 				<p>{{ .text }}</p>
+				<a href="{{ .link }}">Learn more <span class="sr">{{ .texttitle }}</span></a>
 			</div>
 		{{ end }}
 	</div>
