--- a/src/css/imports/_styles.scss
+++ b/src/css/imports/_styles.scss
@@ -1,3 +1,8 @@
+body {
+  font-family: 	var(--font-family);
+  line-height:	var(--line-height);
+}
+
 ::selection {
   background-color: var(--highlight);
 }
@@ -6,10 +11,10 @@
 .divider-grey {
   box-shadow: inset 0 -4px 0 var(--grey-1);
   /* Link hover states */
-  & a {
+  a {
     transition: var(--hover-transition);
   }
-  & ul a:hover, & ul a:focus {
+  ul a:hover, ul a:focus {
     box-shadow: inset 0 -4px 0 var(--primary);
   }
 }
