--- a/src/css/imports/_utilities.scss
+++ b/src/css/imports/_utilities.scss
@@ -1,37 +1,58 @@
-.aspect-ratio {
-  height: 0;
-  position: relative;
-}
-
-.aspect-ratio--16x9 { padding-bottom: 56.25%; }
-.aspect-ratio--9x16 { padding-bottom: 177.77%; }
-
-.aspect-ratio--4x3 {  padding-bottom: 75%; }
-.aspect-ratio--3x4 {  padding-bottom: 133.33%; }
-
-.aspect-ratio--6x4 {  padding-bottom: 66.6%; }
-.aspect-ratio--4x6 {  padding-bottom: 150%; }
-
-.aspect-ratio--8x5 {  padding-bottom: 62.5%; }
-.aspect-ratio--5x8 {  padding-bottom: 160%; }
-
-.aspect-ratio--7x5 {  padding-bottom: 71.42%; }
-.aspect-ratio--5x7 {  padding-bottom: 140%; }
-
-.aspect-ratio--1x1 {  padding-bottom: 100%; }
-
-.aspect-ratio--object {
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 100;
-}
-
 .center {
   margin-right: auto;
   margin-left: auto;
+}
+.bg-center { 
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+.br0.br0.br0 { border-radius: 0; }
+.br1 { border-radius: var(--border-radius); }
+
+.flex { display: flex; }
+
+.justify-between  { justify-content: space-between; }
+
+img {
+  max-width: 100%;
+}
+
+/* Remove border-radiius from full-width images */
+img:not(.w-100) {
+  border-radius: var(--border-radius);
+}
+
+.di { display: inline; }
+.db { display: block; }
+.dib { display: inline-block; }
+
+
+.lh-title { line-height: 1.25; }
+.list { list-style-type: none; }
+
+/* Max Width Scale */
+
+.mw6  {  max-width: 32rem; }
+.mw7  {  max-width: 48rem; }
+
+.sr, 
+.clip {
+  position: fixed;
+  clip: rect(1px, 1px, 1px, 1px);
+}
+
+header, 
+footer,
+nav {
+    li {
+        list-style-type: none
+    }
+    a {
+        color: inherit;
+        text-decoration: none;
+    }
+    ul, ol, li {
+      margin-left: 0;
+      padding-left: 0;
+    }
 }
