--- a/site/layouts/partials/4-up.html
+++ b/site/layouts/partials/4-up.html
@@ -1,7 +1,7 @@
-<div class="blurb-container">
+
+<section class="blurb-container">
 	<h2>{{.heading}}</h2>
 	<p>{{.description}}</p>
-
 	<div class="blurbs">
 		{{ range .blurbs }}
 			<div class="blurb">
@@ -14,4 +14,4 @@
 			</div>
 		{{ end }}
 	</div>
-</div>
+</section>
