--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -41,7 +41,7 @@
 		<ul>
 			<li><a href="/">Home</a></li>
 			<li><a href="/products">Our products</a></li>
-			<li><a href="/values">About</a></li>
+			<li><a href="/techniques">About</a></li>
 			<li><a href="/post">Blog</a></li>
 			<li><a href="/contact">Contact</a></li>
 		</ul>
