--- a/site/layouts/partials/nav.html
+++ b/site/layouts/partials/nav.html
@@ -15,9 +15,11 @@
 	</div>
 
 	<ul>
-		<li><a href="/services">Services</a></li>
+		<li><a href="/services">Services</a>
+		{{ partial "nav_services" }}
+		</li>
 
-		<li><a href="/values">Values</a></li>
+		<li><a href="/techniques">Techniques</a></li>
 
 		<li><a href="/post">Blog</a></li>
 
