--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -37,6 +37,9 @@
 @use './imports/_body';
 @use './imports/_nav';
 @use './imports/_banner';
+@use './imports/_subhead';
+@use './imports/_main_section';
+@use './imports/_section_nav';
 @use './imports/_footer';
 @use './imports/_pagination';
 
