--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -6,7 +6,7 @@
 
 {{ partial "2-up" .Params }}
 
-{{ partial "text-and-image" (dict "heading" .Params.values.heading "text" .Params.values.text "buttonText" "Read more" "buttonLink" "/values") }}
+{{ partial "text-and-image" (dict "heading" .Params.techniques.heading "text" .Params.techniques.text "buttonText" "Read more" "buttonLink" "/techniques") }}
 
 {{ partial "blog" . }}
 
