--- a/site/layouts/partials/text-and-image.html
+++ b/site/layouts/partials/text-and-image.html
@@ -1,21 +1,12 @@
-<div class="bg-grey-1 pv4">
+<div class="subheading">
 	<div class="ph3 mw7 center">
-
-		<div class="flex-l mhn2-l">
-			<div class="w-40-l ph2-l">
-				<h2 class="f2 b lh-title mb2">{{.heading}}</h2>
-
-				<p>{{.text}}</p>
-			</div>
-
-			<div class="w-60-l ph2-l">
-				<img src="img/home-about-section.jpg" alt="" class="mb3">
-			</div>
-		</div>
-
-		<div class="tc">
-			<a href="{{.buttonLink}}" class="btn raise">{{.buttonText}}</a>
-		</div>
-
+		<h2>{{.heading}}</h2>
+		<p>{{.text}}</p>
+		<p>
+			<a href="{{.buttonLink}}"><img src="/img/banner/fruit.webp" alt="{{.heading}}"></a>
+		</p>
+		<p class="tc">
+			<a href="{{.buttonLink}}" class="btn raise">{{.buttonText}}<span class="sr">about {{.heading}}</span></a>
+		</p>
 	</div>
 </div>
