--- a/site/layouts/section/services.html
+++ b/site/layouts/section/services.html
@@ -1,9 +1,33 @@
 {{ define "main" }}
 
+
+{{ if .Params.image }}
 {{ partial "jumbotron" (dict "imageUrl" .Params.image "title" .Title) }}
+{{ end }}
 
+
+{{ if .Params.intro }}
 {{ partial "4-up" .Params.intro }}
+{{ end }}
 
+{{ if .Params.subheadings }}
+{{ partial "service" .Params.subheadings }}
+<section class="service-container">
+{{ .Content }}
+</section>
+{{ end }}
+
+{{ if .Params.testimonials }}
+<div class="pb4">
+  {{ range .Params.testimonials }}
+    {{ partial "blockquote" . }}
+  {{ end }}
+</div>
+{{ end }}
+
+<section class="section-nav">
+{{ partial "nav_services" }}
+</section>
 <!--
 
 {{ with .Params.main }}
@@ -18,11 +42,7 @@
 {{ partial "image-grid" . }}
 {{ end }}
 
-<div class="pb4">
-  {{ range .Params.testimonials }}
-    {{ partial "blockquote" . }}
-  {{ end }}
-</div>
+
 
 <!-- Full-width image 
 <img src="{{ .Params.full_image }}" alt="" class="db w-100">
