--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -41,7 +41,7 @@
 @use './imports/_main_section';
 @use './imports/_section_nav';
 @use './imports/_footer';
-@use './imports/_pagination';
+@use './imports/_pagination-container';
 
 /* partials */
 
